--- a/pltk.cabal
+++ b/pltk.cabal
@@ -62,6 +62,7 @@ library
         CSML.CSMLParser,
         CSML.Elaborator,
         CSML.Grammar,
+        CSML.TextTools,
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -73,6 +74,7 @@ library
     build-depends:
         base ^>=4.17.2.1,
         megaparsec >= 9.6.1 && < 9.7,
+        MissingH >= 1.6.0 && < 1.7,
         mtl >= 2.2.2 && < 2.3,
         parser-combinators >= 1.3.0 && < 1.4,
 
@@ -98,6 +100,8 @@ executable pltk
     -- Other library packages from which modules are imported.
     build-depends:
         base ^>=4.17.2.1,
+        directory >= 1.3.7 && < 1.4,
+        optparse-applicative >= 0.18.1 && < 0.19,
         pltk,
 
     -- Directories containing source files.
